[gd_scene format=4 uid="uid://d3orqt7es0sv3"]

[ext_resource type="Texture2D" uid="uid://dw5xqwrsrvo2u" path="res://common/assets/tabletop/blue.png" id="1_hkghi"]
[ext_resource type="Script" uid="uid://bpawefboseai" path="res://games/high_low/game_manager.gd" id="1_nogpw"]
[ext_resource type="PackedScene" uid="uid://dycyem5cnrnyd" path="res://common/objects/card/card.tscn" id="2_jksrf"]
[ext_resource type="FontFile" uid="uid://u4y1ab2wxs1d" path="res://common/assets/fonts/m5x7.ttf" id="3_bhfql"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jksrf"]
texture = ExtResource("1_hkghi")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_bhfql"]
sources/0 = SubResource("TileSetAtlasSource_jksrf")

[node name="HighLow" type="Node2D" unique_id=1462375816]
scale = Vector2(4, 4)
script = ExtResource("1_nogpw")

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=729845162]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAsAAAAAAAAAAAAOAAsAAAAAAAAAAAANAAsAAAAAAAAAAAAMAAsAAAAAAAAAAAALAAsAAAAAAAAAAAAKAAsAAAAAAAAAAAAJAAsAAAAAAAAAAAAIAAsAAAAAAAAAAAAHAAsAAAAAAAAAAAAGAAsAAAAAAAAAAAAFAAsAAAAAAAAAAAAEAAsAAAAAAAAAAAADAAsAAAAAAAAAAAADAAoAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAABAAsAAAAAAAAAAAAAAAsAAAAAAAAAAAABAAoAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAkAAAAAAAAAAAACAAkAAAAAAAAAAAADAAkAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_bhfql")

[node name="TitleLabel" type="Label" parent="." unique_id=500052870]
custom_minimum_size = Vector2(81.615, 0)
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 4.0
offset_right = 244.0
offset_bottom = 17.0
grow_horizontal = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("3_bhfql")
text = "High-Low"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditContainer" type="HBoxContainer" parent="." unique_id=1427102946]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 172.0
offset_right = 244.0
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 0

[node name="BetLabel" type="Label" parent="CreditContainer" unique_id=400165825]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("3_bhfql")
text = "Bet 1"
vertical_alignment = 1

[node name="PayoutLabel" type="Label" parent="CreditContainer" unique_id=462242427]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("3_bhfql")
text = "Payout 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditLabel" type="Label" parent="CreditContainer" unique_id=214305813]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("3_bhfql")
text = "Credits 0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HighLabel" type="Label" parent="." unique_id=1097495543]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(81.615, 0)
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 48.0
offset_right = 244.0
offset_bottom = 61.0
grow_horizontal = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("3_bhfql")
text = "Higher"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardContainer" type="HBoxContainer" parent="." unique_id=47530125]
offset_right = 256.0
offset_bottom = 196.0

[node name="PrevCard" parent="CardContainer" unique_id=2056669212 instance=ExtResource("2_jksrf")]
unique_name_in_owner = true
position = Vector2(64, 96)

[node name="CurrentCard" parent="CardContainer" unique_id=1400332155 instance=ExtResource("2_jksrf")]
unique_name_in_owner = true
position = Vector2(128, 96)

[node name="NextCard" parent="CardContainer" unique_id=245627459 instance=ExtResource("2_jksrf")]
unique_name_in_owner = true
position = Vector2(192, 96)

[node name="LowLabel" type="Label" parent="." unique_id=871357560]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(81.615, 0)
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 128.0
offset_right = 244.0
offset_bottom = 141.0
grow_horizontal = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("3_bhfql")
text = "Lower"
horizontal_alignment = 1
vertical_alignment = 1
